# CG_course_work

./: CMakeLists.txt  README.md
color_data/: geo_smooth
inc/: Avg_Strategy.h  Camera.h  Color.h  Diamond_Square.h  Fixed_Avg.h  Light_timer.h  MainWindow.h  Operation.h  Operation_history.h  Plane.h  Render.h  Terrain.h  Terrain_manager.h  Transform.h  _math.h  experement.h  light.h  lightManager.h  mainwindow.ui
rpz/: additions.tex  analytic_part.tex  conclusion.tex  design_part.tex  experimental_part.aux  experimental_part.tex  intro.tex  links.tex  report.tex  tech_part.tex
rpz/images/: .$Lev_Dar.drawio.bkp  .$Lev_Dar_Rec.drawio.bkp  .$Lev_Dar_Rec_Hash.drawio.bkp  .$Lev_Rec.drawio.bkp  .$binary_search.drawio.bkp  .$common.drawio.bkp  .$linear_search.drawio.bkp  .$vinograd.drawio.bkp  .$vinograd_opt.drawio.bkp  .$Диаграмма без названия.drawio.bkp
src/: Avg_Strategy.cpp  Camera.cpp  Color.cpp  Diamond_Square.cpp  Fixed_Avg.cpp  Light_timer.cpp  MainWindow.cpp  Operation.cpp  Operation_history.cpp  Plane.cpp  Render.cpp  Terrain.cpp  Terrain_manager.cpp  Transform.cpp  _math.cpp  experement.cpp  light.cpp  lightManager.cpp  main.cpp
